# vsl_ial

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_cs.py  test_datasets.py  test_distance.py  test_stress.py
vsl_ial/: __init__.py  image_metric.py  stress.py
vsl_ial/cs/: __init__.py  cam.py  cielab.py  cieluv.py  ciexyy.py  hls.py  hsv.py  icacb.py  ictcp.py  jzazbz.py  linrgb.py  lms.py  oklab.py  opponent.py  pcs23.py  prolab.py  srgb.py  xyz.py
vsl_ial/datasets/: illuminants.json
vsl_ial/datasets/data/bfd_p/: bfd-c.json  bfd-d65.json  bfd-m.json
vsl_ial/datasets/data/illuminants/: d.json  f2.json  f7.json
vsl_ial/datasets/data/leeds/: leeds.json
vsl_ial/datasets/data/witt/: witt.json
vsl_ial/datasets/distance/: __init__.py
vsl_ial/datasets/distance/combvd/: README.md  leeds.json  rit-dupont.json  witt.json
vsl_ial/datasets/distance/combvd/bfd_p/: bfd-c.json  bfd-d65.json  bfd-m.json
vsl_ial/datasets/distance/constant_hue/: README.md  __init__.py  hung_berns.json
vsl_ial/datasets/distance/ellipses/: README.md  macadam_1942.json  macadam_1974.json
vsl_ial/datasets/sensitivities/: __init__.py
vsl_ial/datasets/stash/: README.md
vsl_ial/eval/: __main__.py  _base.py  config.py  cs.py  dataset.py  distance-pcs23-ucs-article.json  eval.py  eval2.py  hue-linearity-pcs23-ucs-article.json  metrics.py  pcs23-ucs-article.json
vsl_ial/image_appearance_model/: icam06.py
vsl_ial/optimization/: __main__.py  _base.py  config.py  dataset.py  debug.json  optimization.py  pcs23ucs.json
