[project]
name = "vsl_ial"
dynamic = ["version"]
authors = [
  { name="Arseniy Terekhin", email="senyai@gmail.com" },
  { name="Dmitry Nikolaev" },
  { name="Olga Basova" },
  { name="Valerii Timofeev" },
]
description = "Color spaces made reasonable"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "MIT"
dependencies = ["numpy"]
[project.urls]
"Homepage" = "https://github.com/iitpvisionlab/vls_ial"
"Bug Reports" = "https://github.com/iitpvisionlab/vls_ial/issues"
"Source" = "https://github.com/iitpvisionlab/vls_ial"
[project.optional-dependencies]
extra = ["rich", "json5", "pydantic"]
[tool.setuptools.dynamic]
version = {attr = "vsl_ial.__version__"}
[tool.black]
line-length = 79
target-version = ["py310"]
